Changed Table color

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <title>Angular JS</title>
     <style>
         table, th, td {
-            border: 1px solid grey;
+            border: 1px solid #000000;
             border-collapse: collapse;
             padding: 5px;
         }
 
             table tr:nth-child(odd) {
-                background-color: #f2f2f2;
+                background-color: #00f7ff;
             }
 
             table tr:nth-child(even) {
